notes - exit, voice, and loyalty

--- a/public/404.html
+++ b/public/404.html
@@ -106,7 +106,7 @@
                         </li>
                         
                         <li>
-                            <a href="/categories/others/">others</a>
+                            <a href="/categories/note/">note</a>
                         </li>
                         
                         <li>
